PR c++/89267 - change of error location.

* pt.c (tsubst_copy_and_build): Do still clear expr location
	for instantiated thunk calls.

From-SVN: r268776